[package]
name = "honeywell-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
